--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Chinky Bansal - UX Designer & Front End Developer</title>
+<title>Chinky Bansal - 3D Modeling Architect</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
