update content change base color

--- a/public/index.html
+++ b/public/index.html
@@ -82,9 +82,10 @@
       <div class="col-md-12 text-center"><img src="img/about.jpg" class="img-responsive"></div>
       <div class="col-md-8 col-md-offset-2">
         <div class="about-text">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare.</p>
-          <p class="text-center"><a class="btn btn-primary" href="#"><i class="fa fa-download"></i> Download Resume</a></p>
+          <p>I am an artist who loves challenges: an explorer unafraid to discover!</p>
+          <p>I have a lot of professional experience in the field of 3D, specializing in: lighting | rendering | post production. My strong point is my skills in architectural 3D visualizations. I have had substantial experience working small and large companies and projects.</p>
+          <p>My rules to live by: Excellence; Responsibility; Dedication</p>
+          <!-- <p class="text-center"><a class="btn btn-primary" href="#"><i class="fa fa-download"></i> Download Resume</a></p> -->
         </div>
       </div>
     </div>
@@ -287,6 +288,78 @@
               <img src="img/portfolio/16-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/17-large.jpg" title="Project description" rel="prettyPhoto">
+              <div class="hover-text">
+                <h4>Project Title</h4>
+                <small>Web Design</small> </div>
+              <img src="img/portfolio/17-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/18-large.jpg" title="Project description" rel="prettyPhoto">
+              <div class="hover-text">
+                <h4>Project Title</h4>
+                <small>Web Design</small> </div>
+              <img src="img/portfolio/18-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/19-large.jpg" title="Project description" rel="prettyPhoto">
+              <div class="hover-text">
+                <h4>Project Title</h4>
+                <small>Web Design</small> </div>
+              <img src="img/portfolio/19-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/20-large.jpg" title="Project description" rel="prettyPhoto">
+              <div class="hover-text">
+                <h4>Project Title</h4>
+                <small>Web Design</small> </div>
+              <img src="img/portfolio/20-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/21-large.jpg" title="Project description" rel="prettyPhoto">
+              <div class="hover-text">
+                <h4>Project Title</h4>
+                <small>Web Design</small> </div>
+              <img src="img/portfolio/21-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/22-large.jpg" title="Project description" rel="prettyPhoto">
+              <div class="hover-text">
+                <h4>Project Title</h4>
+                <small>Web Design</small> </div>
+              <img src="img/portfolio/22-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/23-large.jpg" title="Project description" rel="prettyPhoto">
+              <div class="hover-text">
+                <h4>Project Title</h4>
+                <small>Web Design</small> </div>
+              <img src="img/portfolio/23-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/24-large.jpg" title="Project description" rel="prettyPhoto">
+              <div class="hover-text">
+                <h4>Project Title</h4>
+                <small>Web Design</small> </div>
+              <img src="img/portfolio/24-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -300,17 +373,17 @@
     </div>
     <div class="row">
       <div class="col-md-3 col-sm-3 wow fadeInDown" data-wow-delay="200ms">
-        <div class="achievement-box"> <span class="count">25</span>
+        <div class="achievement-box"> <span class="count">85</span>
           <h4>Happy Clients</h4>
         </div>
       </div>
       <div class="col-md-3 col-sm-3 wow fadeInDown" data-wow-delay="400ms">
-        <div class="achievement-box"> <span class="count">4200</span>
+        <div class="achievement-box"> <span class="count">5616</span>
           <h4>Hours of Work</h4>
         </div>
       </div>
       <div class="col-md-3 col-sm-3 wow fadeInDown" data-wow-delay="600ms">
-        <div class="achievement-box"> <span class="count">38</span>
+        <div class="achievement-box"> <span class="count">252</span>
           <h4>Projects Completed</h4>
         </div>
       </div>
@@ -334,14 +407,14 @@
         <ul class="timeline">
           <li>
             <div class="timeline-image">
-              <h4>Feb 2013 <br>
+              <h4>Jul 2016 <br>
                 - <br>
                 Present </h4>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Creative Agency</h4>
-                <h4 class="subheading">UX Developer</h4>
+                <h4>3Dstudio.com</h4>
+                <h4 class="subheading">3d Architectural Visualizer</h4>
               </div>
               <div class="timeline-body">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
@@ -350,14 +423,14 @@
           </li>
           <li class="timeline-inverted">
             <div class="timeline-image">
-              <h4>Nov 2011 <br>
+              <h4>Aug 2013 <br>
                 - <br>
-                Jan 2013 </h4>
+                Jun 2016 </h4>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Creative Agency</h4>
-                <h4 class="subheading">Front-end Developer</h4>
+                <h4>FlipIt Productions</h4>
+                <h4 class="subheading">Senior Visualizer</h4>
               </div>
               <div class="timeline-body">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
@@ -431,7 +504,7 @@
       <div class="social">
         <ul>
           <li><a href="https://www.facebook.com/chetna.bansal.507"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+          <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
           <!-- <li><a href="#"><i class="fa fa-dribbble"></i></a></li> -->
           <!-- <li><a href="#"><i class="fa fa-github"></i></a></li> -->
           <!-- <li><a href="#"><i class="fa fa-instagram"></i></a></li> -->
